--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2-dars</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <style>
+        /* #internal_p{
+            color: aqua;
+        }
+        [ziyoda]{
+            background-color: blue;
+        } */
+        .clas_internal{
+            color: aqua;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>2-dars</h1>
+    <h3>CSS(Cascading style sheets)</h3>
+    <ul>
+        <li><p style="color: blue;">Inline usul</p></li>
+        <li><p id="internal_p" class="clas_internal" ziyoda>Internal usul</p></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+        <li><img src="./img/olma.jpg" alt="Olma" width="50" height="50"> <span id="external_p"> Olma</span></li>
+    </ul>
 </body>
 </html>
